# llama.cpp

ggml/: CMakeLists.txt
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-hrx/: CMakeLists.txt  ggml-hrx.cpp
ggml/src/ggml-hrx/kernels/: flash_attn_ext_f32_f16_decode_gqa8_reduce.hip.cpp  flash_attn_ext_f32_f16_decode_gqa8_split.hip.cpp  flash_attn_ext_f32_f16_prefill_direct_gfx11.inc  gated_delta_net_f32.hip.cpp  generate_hrx_kernels.py  get_rows_f32.hip.cpp  mul_mat_id_q4_k.hip.cpp  mul_mat_id_q4_k_mul.hip.cpp  mul_mat_id_q4_k_q8_1_x4_mmq.hip.cpp  mul_mat_id_q4_k_swiglu.hip.cpp  mul_mat_vec_bf16.hip.cpp  mul_mat_vec_bf16_set_rows.hip.cpp  mul_mat_vec_bf16_swiglu.hip.cpp  mul_mat_vec_f16_batched.hip.cpp  mul_mat_vec_f32.hip.cpp  mul_mat_vec_f32_batched.hip.cpp  mul_mat_vec_q5_k.hip.cpp  mul_mat_vec_q5_k_q8_1_wave64.hip.cpp  mul_mat_vec_q6_k.hip.cpp  mul_mat_vec_q6_k_q8_1_wave64.hip.cpp  mul_mat_vec_q8_0.hip.cpp  ssm_conv_update_f32.hip.cpp  topk_moe_f32_shared.hip.cpp  topk_moe_f32_wave32_top8_norm.hip.cpp  unary_f32.hip.cpp
ggml/src/ggml-hrx/tools/hip-bench/: bf16_swiglu_bench.hip.cpp  dense_matvec_bench.hip.cpp  norm_bench.hip.cpp  q4_moe_bench.hip.cpp  q8_add_bench.hip.cpp  quant_matvec_bench.hip.cpp  quant_q8_1_bench.hip.cpp  topk_moe_bench.hip.cpp
tests/: CMakeLists.txt  test-backend-hrx.cpp  test-backend-ops.cpp
